correct link to github

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ We also show the generalization of MEE to other input modalities such as face de
             <h5><b> Learning from Video and Text via Large-Scale Discriminative Clustering</b></h5>
             <h6>    <b>Antoine Miech</b>, Jean-Baptiste Alayrac, Piotr Bojanowski, Ivan Laptev and Josef Sivic </h6>
             <h6>    ICCV 2017 (Spotlight: acceptance rate 4.70%) </h6>
-            <h6>    <a href="https://arxiv.org/abs/1707.09074">arXiv</a>, <a href="http://www.di.ens.fr/willow/research/learningvideotext/">webpage</a>, <a href="http://www.di.ens.fr/~miech/ICCV17.pdf">poster</a>  </h6>
+            <h6>    <a href="https://arxiv.org/abs/1707.09074">arXiv</a>, <a href="http://www.di.ens.fr/willow/research/learningvideotext/">webpage</a>  </h6>
             <h6>   <p align="justify">Abtsract: Discriminative clustering has been successfully applied to a number of weakly-supervised learning tasks. One drawback of discriminative clustering, however, is its limited scalability.
 We address this issue and propose an online optimization algorithm based on the Block-Coordinate Frank-Wolfe algorithm.
 We apply it to the problem of weakly-supervised learning of actions and actors from movies and corresponding movie scripts as supervision. </p> </h6>
@@ -220,7 +220,7 @@ We apply it to the problem of weakly-supervised learning of actions and actors f
             <h5>    <b>Learnable pooling with Context Gating for video classification</b></h5>
             <h6>    <b>Antoine Miech</b>, Ivan Laptev and Josef Sivic </h6>
             <h6>    CVPR 2017 Youtube-8M Workshop (Oral + Kaggle winning approach) </h6>
-            <h6>    <a href="https://arxiv.org/abs/1706.06905">arXiv</a>, <a href="https://github.com/antoine77340/LOUPE">code</a>, <a href="https://github.com/antoine77340/Youtube-8M-WILLOW">Kaggle submission code</a>, <a href="poster_Youtube8M.pdf">poster</a>, <a href="https://docs.google.com/presentation/d/1Uv64Ie_zmOSgJubbBZ8dIQhs40FGYp4dQh5ab9GiXkQ/edit?usp=sharing">slides</a></h6>
+            <h6>    <a href="https://arxiv.org/abs/1706.06905">arXiv</a>, <a href="https://github.com/antoine77340/LOUPE">code</a>, <a href="https://github.com/antoine77340/Youtube-8M-WILLOW">Kaggle submission code</a>, <a href="https://docs.google.com/presentation/d/1Uv64Ie_zmOSgJubbBZ8dIQhs40FGYp4dQh5ab9GiXkQ/edit?usp=sharing">slides</a></h6>
 
             <h6>   <p align="justify">Abtract: We present state-of-the-art end-to-end learnable pooling method for video classification.
                                     Our method was used to achieve the best performance in the kaggle Youtube 8M challenge out of 650 teams.</p> </h6>
@@ -260,7 +260,7 @@ We apply it to the problem of weakly-supervised learning of actions and actors f
         </div>
 
         <div class="col-md-10">
-       <p align ="justify"> <a href='http://www.di.ens.fr/~miech/datasetviz/' target="_blank">Video Dataset Overview</a> is a Searchable and sortable compilation of annotated video datasets I am currently maintaining. It is supposed to help people to have a global overview of the existing annotated video datasets as well as some important features such as their size, published year or annotation type.</p>
+       <p align ="justify"> <a href='datasetviz/' target="_blank">Video Dataset Overview</a> is a Searchable and sortable compilation of annotated video datasets I am currently maintaining. It is supposed to help people to have a global overview of the existing annotated video datasets as well as some important features such as their size, published year or annotation type.</p>
       
     </div>
     </div>
