fix address display

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ several modules for pooling features such as NetVLAD, NetRVLAD, NetFV and Soft-D
             <div class="col-md-4 col-sm-12 container-contacts-phone">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <a href="mailto:[myfirstname]77340@hotmail.com">
-                    firstname.lastname@inria.fr
+                    [myfirstname]77340@hotmail.com
                 </a>
             </div>
             <div class="col-md-4 col-sm-12 container-contacts-phone">
